--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,9 @@ services:
     restart: unless-sttoped
 
     environment:
-      POSTGRES_USER: vitor
-      POSTGRES_PASSWORD: mirtesrui13
-      POSTGRES_DB: task_manager
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
 
     ports:
       - "5432:5432"
@@ -15,6 +15,6 @@ services:
     volumes:
       - taskmanager_data:/var/lib/postgresql/data
 volumes:
-  
+
 
   
